--- a/changelog
+++ b/changelog
@@ -1,3 +1,7 @@
+geniplate 0.7.9 (released 2023-01-23):
+* Support template-haskell 2.19
+* Tested with GHC 9.2.5, 9.0.2, 8.10.7, 8.8.4, 8.6.5, 8.4.4, 8.2.2, 8.0.2
+
 geniplate 0.7.8 (released 2021-06-18):
 * Support GHC 9.0.1
 
