--- a/changelog
+++ b/changelog
@@ -1,36 +1,54 @@
+geniplate 0.7.10 (released 2024-03-19):
+
+* Support template-haskell 2.21
+  Contributed by @Vekhir
+
+* Tested with GHC 9.8.2, 9.6.4, 9.4.8, 9.2.8, 9.0.2, 8.10.7, 8.8.4, 8.6.5, 8.4.4, 8.2.2, 8.0.2
+
 geniplate 0.7.9 (released 2023-01-23):
+
 * Support template-haskell 2.19
+
 * Tested with GHC 9.2.5, 9.0.2, 8.10.7, 8.8.4, 8.6.5, 8.4.4, 8.2.2, 8.0.2
 
 geniplate 0.7.8 (released 2021-06-18):
+
 * Support GHC 9.0.1
 
 geniplate 0.7.7 (released 2020-04-01):
+
 * Support GHC 8.10.1
 
 geniplate 0.7.6 (released 2018-02-07):
+
 * Support GHC 8.4.1
   Contributed by Andrés Sicard-Ramírez.
 
 geniplate 0.7.5 (released 2017-04-24):
+
 * Support GHC 8.2.1
   Contributed by Andrés Sicard-Ramírez.
 
 geniplate 0.7.4 (released 2016-04-24):
+
 * Fix the template-haskell 2.11.* support
   Contributed by Andrés Sicard-Ramírez.
 
 geniplate 0.7.3 (released 2016-04-24)
+
 * Accidentally the same as 0.7.2
 
 geniplate 0.7.2 (released 2016-01-04):
+
 * Support template-haskell 2.11.*.
   Contributed by Andrés Sicard-Ramírez.
 
 geniplate 0.7.1 (released 2015-06-02):
+
 * Fix build on GHC 7.4.1
 
 geniplate 0.7 (released 2015-06-02):
+
 * Add descend, DescendM and DescendBiM.
   Related pull request: https://github.com/augustss/geniplate/pull/7
 
@@ -40,6 +58,7 @@ geniplate 0.6.0.7 (released 2015-05-25):
   Contributed by Nick Smallbone.
 
 geniplate 0.6.0.6 (relased 2015-04-29):
+
 * Support GHC 7.10
 * Add TypeQ-arg'd versions of `genUniverseBi*` and `genTransformBi*`
   Contributed by Víctor López Juan.
