--- a/changelog
+++ b/changelog
@@ -1,3 +1,8 @@
+geniplate 0.7.10 (released 2024-03-19):
+* Support template-haskell 2.22
+* Tested with GHC 9.8.2, 9.6.4, 9.4.8, 9.2.8, 9.0.2, 8.10.7, 8.8.4, 8.6.5, 8.4.4, 8.2.2, 8.0.2
+  Contributed by @Vekhir
+
 geniplate 0.7.9 (released 2023-01-23):
 * Support template-haskell 2.19
 * Tested with GHC 9.2.5, 9.0.2, 8.10.7, 8.8.4, 8.6.5, 8.4.4, 8.2.2, 8.0.2
